tests/snapshots/latex__latex4.snap
---
source: tests/latex.rs
expression: "run(\"(A → B → A) ∧ (A ∨ B → B ∨ A)\")"

---
\documentclass[a4paper,twoside=false,DIV=16]{scrartcl}
\usepackage{bussproofs}
\usepackage{colortbl}
\usepackage{varwidth}
\usepackage{pifont}
\usepackage{xcolor}
\usepackage{listings}
\usepackage{xpatch}
\usepackage{tikz}

\usetikzlibrary{graphs}
\usetikzlibrary{graphdrawing}
\usetikzlibrary{decorations.pathmorphing}
\usegdlibrary{layered}

\newcommand{\cmark}{\textcolor{blue}{\ding{52}}}%
\newcommand{\xmark}{\textcolor{red}{\ding{56}}}%

\lstset{%
  basicstyle={\small},%
  identifierstyle={\small},%
  commentstyle={\small\itshape},%
  keywordstyle={\small\bfseries},%
  ndkeywordstyle={\small},%
  stringstyle={\small\ttfamily},
  frame={tb},
  breaklines=true,
  columns=[l]{fullflexible},%
  numbers=left,%
  xrightmargin=0em,%
  xleftmargin=3em,%
  numberstyle={\scriptsize},%
  stepnumber=1,
  numbersep=1em,%
  lineskip=-0.5ex%
}

\title{Logic solver result}

\makeatletter
% remove author, date, publishers
\xpatchcmd{\@maketitle}
  {%
    {%
      \usekomafont{author}{%
        \lineskip .5em%
        \begin{tabular}[t]{c}
          \@author
        \end{tabular}\par
      }%
    }%
    \vskip 1em%
    {\usekomafont{date}{\@date \par}}%
    \vskip \z@ \@plus 1em
    {\usekomafont{publishers}{\@publishers \par}}%
  }
  {}{}{\PatchFailed}
\makeatother

\begin{document}

\maketitle


\begin{center}
\begin{tabular}{|c|}
  \hline
  \cellcolor[gray]{0.8}
  \begin{minipage}{10cm}
    \centering
    Result
  \end{minipage}
  \\\hline

  {
    \huge
    \cmark
    Provable
  }
  \\\hline
\end{tabular}
\end{center}

\section*{Input}

$(A \to B \to A) \wedge (A \vee B \to B \vee A)$

\section*{Proof}

\begin{prooftree}
\AxiomC{$[A]_{1}$}
\RightLabel{\scriptsize${\to}_I (2)$}
\UnaryInfC{$B \to A$}
\RightLabel{\scriptsize${\to}_I (1)$}
\UnaryInfC{$A \to B \to A$}
\AxiomC{$[A \vee B]_{3}$}
\AxiomC{$[A]_{4}$}
\RightLabel{\scriptsize${\vee}_{I 2}$}
\UnaryInfC{$B \vee A$}
\AxiomC{$[B]_{4}$}
\RightLabel{\scriptsize${\vee}_{I 1}$}
\UnaryInfC{$B \vee A$}
\RightLabel{\scriptsize${\vee}_E (4)$}
\TrinaryInfC{$B \vee A$}
\RightLabel{\scriptsize${\to}_I (3)$}
\UnaryInfC{$A \vee B \to B \vee A$}
\RightLabel{\scriptsize${\wedge}_I$}
\BinaryInfC{$(A \to B \to A) \wedge (A \vee B \to B \vee A)$}
\end{prooftree}

\end{document}
